# graphics662-pipeline

./: CMakeLists-zip.txt  CMakeLists.txt  README.md  TODO.txt
examples/: matcap.fs  matcap_bunny.json  matcap_head.json  matcap_head_uniforms.json  matcap_sphere.json  normalmap_head.json  pbr.fs  pbr.vs  pbr_boombox-nonormals-direct.json  pbr_boombox-nonormals-sampled.json  pbr_boombox-normals-direct.json  pbr_boombox-normals-sampled.json  pbr_bunny.json  pbr_cube.json  pbr_cube2.json  pbr_earth.json  pbr_helmet.json  pbr_robot.json  pbr_sphere-dielectric-direct-lights.json  pbr_sphere-dielectric-direct.json  pbr_sphere-dielectric-sampled.json  pbr_sphere-metal-direct.json  pbr_sphere-metal-sampled.json  sphere.json
examples/head/: Infinite-Scan_License.txt
examples/pbr/boombox/: BoomBox.mtl
examples/pbr/cube/: Cube.mtl
examples/pbr/damaged_helmet/: DamagedHelmet.mtl
examples/pbr/robot/: scene.mtl
src/: animation.cpp  animation_parser.cpp  fancyscene.cpp  fancyscene.h  mesh.cpp  simplescene.cpp  texture.cpp
